tx работа с балансом
